--- a/Reinforcement_Learning.ipynb
+++ b/Reinforcement_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Reinforcement Learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqHuS65tK/NyMFHpJsxbQs",
+      "authorship_tag": "ABX9TyP5YEvO23hBHKBgW/rUViDc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,8 +35,9 @@
       },
       "outputs": [],
       "source": [
+        "#Ref. https://www.gymlibrary.ml/environments/atari/alien/\n",
         "import gym\n",
-        "env = gym.make(\"LunarLander-v2\")\n",
+        "env = gym.make(\"ALE/Alien-v5\")\n",
         "observation, info = env.reset(seed=42, return_info=True)\n",
         "for _ in range(1000):\n",
         "   env.render()\n",
