--- a/Reinforcement_Learning.ipynb
+++ b/Reinforcement_Learning.ipynb
@@ -92,6 +92,7 @@
    "source": [
     "# We use version 0 as the original version\n",
     "# This cell describes the characteristics of the problem\n",
+    "# We create the environment \n",
     "problem = \"CarRacing-v0\"\n",
     "env = gym.make(problem)\n",
     "\n",
@@ -974,6 +975,8 @@
     "count_break = 0\n",
     "last_best = 0\n",
     "for ie in range(params['n_episodes']):\n",
+    "    #  Before starting, the environment must be reset.\n",
+    "    # This function returns the first observation of the environment.\n",
     "    state = env.reset()\n",
     "    params['noise'].reset()\n",
     "    done = False\n",
@@ -1048,7 +1051,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('kaggle_ballena')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1062,11 +1065,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "db22d86615f0d172976e68f8beb048645fe69585b6b0bcd05208bccb1250dcf2"
+    "hash": "0d4264267aca0e5a688297b08f75730a6c136b53c852ffec4dff7e9c93f8cabb"
    }
   }
  },
